[package]
name = "sw-cdp1802-io"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "CDP1802 live I/O demo UI with Yew/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sw-cdp1802-emulator = { path = "../sw-cdp1802-emulator" }
sw-cdp1802-asm = { path = "../sw-cdp1802-asm" }
sw-cdp1802-isa = { path = "../sw-cdp1802-isa" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["MouseEvent", "Window"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
